update style css

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Assignment-1 WebGL</title>
         <style>
             body {
-                background-color: rgb(68, 127, 175);
+                background-color:  rgb(68, 127, 175);
             }
         
             h1 {
@@ -20,13 +20,12 @@
             p {
                 color: white;
                 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-                font-weight: bolder;
                 margin: auto;
                 text-align: center;
             }
         
             canvas {
-                border: 3px solid rgb(19, 134, 138);
+                border: 3px solid #000000;
                 border-radius: 20px;
                 margin: auto;
                 position: absolute;
@@ -36,10 +35,10 @@
         </style>
     </head>
     <body onload="main()">
-        <h1>Husin Muhammad Assegaff</h1>
+        <h1>Jar | Husin Muhammad Assegaff</h1>
         <p>Left picture: <strong>topright.jpg</strong></p>
-        <p style="padding-bottom: 20px;">Right picture: <strong>topleft.jpg</strong>topleft.jpg</p>
-        <canvas width="700" height="500" id="myCanvas" style="border: 1px solid black;">
+        <p style="padding-bottom: 20px;">Right picture: <strong>topleft.jpg</strong></p>
+        <canvas width="700" height="500" id="myCanvas">
             Your browser does not support WebGL rendering.
         </canvas>
         <script src="main.js"></script>
