--- a/assignment-3.html
+++ b/assignment-3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jar | Husin Muhammad Assegaff</title>
+    <title>My Lovely WebGL - 05111940000127</title>
     <link rel="stylesheet" href="/css/style-2.css" />
 
     <!-- Bootstrap -->
