--- a/assignment-3.html
+++ b/assignment-3.html
@@ -15,6 +15,7 @@
     <script src="./js/assignment-3/gl-matrix-min.js"></script>
     <script defer src="./js/assignment-3/functions.js"></script>
     <script defer src="./js/assignment-3/Cube.js"></script>
+    <script defer src="./js/assignment-3/Plane.js"></script>
     <script defer src="./js/assignment-3/Jar.js"></script>
     <script defer src="./js/assignment-3/main.js"></script>
 
@@ -22,14 +23,14 @@
     <body>
         <div class="container  text-center text-white">
             <div class="my-3">
-                <div class="h1">Jar | husinassegaff</div>
+                <div class="h1">Hackathon</div>
                 <div class="h3">Husin Muhammad Assegaff</div>
                 <div class="h5">05111940000127</div>
             </div>
             
             <div class="row">
 
-                <div class="col-6">
+                <div class="col-12">
                     <div class="mb-3">
                         <canvas width="640" height="360" class="myCanvas" id="myCanvas">
                             Your Browser doesn't support Canvas
@@ -37,7 +38,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-6">
+                <!-- <div class="col-md-6">
                     <div class="py-3 container-wasd mx-auto">
 
                         <div class="px-2">
@@ -59,7 +60,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </body>
